2013-10-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/arm/setjmp.S: Add missing license section.

2013-10-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/swiss.sed: Add replacement for key names and for term computer.

2013-10-02  Vladimir Testov <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/theme_loader.c: New global options for the
	theme background image handling. desktop-image-scale-method,
	desktop-image-h-align, desktop-image-v-align.
	* grub-core/gfxmenu/view.c: Likewise.
	* include/gfxmenu_view.h: Likewise.
	* include/bitmap_scale.h: Proportional scale functions introduced.
	* grub-core/video/bitmap_scale.c: Likewise. Verification checks are
	put in a separate functions. GRUB_ERR_BUG is set for grub_error in
	cases of unexpected input variables for scale functions.
	* docs/grub.texi: Updated documentation for new options.

2013-10-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/video/readers/png.c: Support narrow (4-/2-/1-bpp) PNG.

2013-10-01  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* grub-core/tests/checksums.h: Corrected due to changes in
	bilinear interpolation function.

2013-10-01  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* grub-core/video/bitmap_scale.c (scale_bilinear): Increased precision
	to eliminate artefacts in bilinear interpolation.

2013-09-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/video/readers/tga.c: Support paletted tga.

2013-09-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/video/readers/jpeg.c (grub_jpeg_decode_data): Remove
	incorrect cbcr setting when in color mode.

2013-09-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/video/readers/png.c: Support paletted images and clean up
	greyscale support.

2013-09-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/terminfo.c (grub_terminfo_readkey): Fix
	usage of wrong table which resulted in mishandling of 4-byte
	sequences.

2013-09-28  Vladimir Serbinenko  <phcoder@gmail.com>
